<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.example.voxelearth</groupId>
    <artifactId>voxelearth</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>voxelearth</name>

    <repositories>
      <repository>
        <id>papermc-repo</id>
        <url>https://repo.papermc.io/repository/maven-public/</url>
      </repository>
    </repositories>

    <dependencies>
        <dependency>
          <groupId>io.papermc.paper</groupId>
          <artifactId>paper-api</artifactId>
          <version>1.20.4-R0.1-SNAPSHOT</version>
          <scope>provided</scope>
        </dependency>
          <dependency>
          <groupId>com.mojang</groupId>
          <artifactId>brigadier</artifactId>
          <version>1.0.18</version>
          <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.json</groupId>
          <artifactId>json</artifactId>
          <version>20230227</version> <!-- Use the latest version -->
      </dependency>
    </dependencies>
<build>
  <resources>
    <resource>
      <directory>src/main/resources</directory>
      <filtering>true</filtering>
    </resource>
  </resources>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.11.0</version>
            <configuration>
                <release>21</release>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.5.3</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>shade</goal>
                    </goals>
                    <configuration>
                        <finalName>VoxelEarth</finalName>
                        <minimizeJar>false</minimizeJar>
                        <relocations>
                            <relocation>
                                <pattern>org.json</pattern>
                                <shadedPattern>my.shaded.org.json</shadedPattern>
                            </relocation>
                        </relocations>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    </plugins>
</build>

<profiles>
  <profile>
    <id>release</id>
    <properties>
      <voxelearth.debug>false</voxelearth.debug>
    </properties>
  </profile>
  <profile>
    <id>debug</id>
    <properties>
      <voxelearth.debug>true</voxelearth.debug>
    </properties>
  </profile>
</profiles>

</project>
